--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -35,6 +35,7 @@ body, html {
 }
 
 #win-popup h2 {
+    font-family: Arial, sans-serif;
     margin-bottom: 20px;
     font-size: 24px;
     color: #333;
@@ -46,13 +47,13 @@ body, html {
     font-size: 18px;
     cursor: pointer;
     border: none;
-    background-color: #4CAF50;
+    background-color: #9900FF;
     color: white;
     border-radius: 5px;
 }
 
 #win-popup button:hover {
-    background-color: #45a049;
+    background-color: #8900EF;
 }
 
 /* Main menu (overlayed initially) */
@@ -73,18 +74,19 @@ body, html {
 
 /* Buttons inside the menu */
 #menu button, #settings-menu button {
+    font-family: Arial, sans-serif;
     margin: 10px;
     padding: 10px 20px;
     font-size: 18px;
     cursor: pointer;
     border: none;
-    background-color: #4CAF50;
+    background-color: #9900FF;
     color: white;
     border-radius: 5px;
 }
 
 #menu button:hover, #settings-menu button:hover {
-    background-color: #45a049;
+    background-color: #8900EF;
 }
 
 /* Gear button styling */
