--- a/docs/styles.css
+++ b/docs/styles.css
@@ -27,7 +27,7 @@ body, html {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.9);  /* Semi-transparent background */
+    background-color: rgba(255, 255, 255, 0.5);  /* Semi-transparent background */
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);  /* Add a little shadow */
@@ -38,7 +38,13 @@ body, html {
     font-family: Arial, sans-serif;
     margin-bottom: 20px;
     font-size: 24px;
-    color: #333;
+    color: black;
+
+    text-shadow: 
+        -2px -2px 1 #fff,  
+         2px -2px 1 #fff,
+        -2px  2px 1 #fff,
+         2px  2px 1 #fff;
 }
 
 #win-popup button {
@@ -92,7 +98,7 @@ body, html {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.8);  /* Semi-transparent background */
+    background-color: rgba(255, 255, 255, 0.5);  /* Semi-transparent background */
     padding: 20px;
     border-radius: 10px;
     z-index: 10;  /* Ensure it's above the game board */
@@ -137,7 +143,7 @@ body, html {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.8);  /* Semi-transparent */
+    background-color: rgba(255, 255, 255, 0.5);  /* Semi-transparent */
     padding: 20px;
     border-radius: 10px;
     z-index: 15;  /* Ensure it's above the game board */
