--- a/docs/styles.css
+++ b/docs/styles.css
@@ -62,6 +62,15 @@ body, html {
     background-color: #8900EF;
 }
 
+#ai-timer {
+    position: absolute;
+    bottom: 30px;
+    left: 50%;  /* Position it at the top-right corner */
+    font-size: 30px;
+    z-index: 4;   /* Make sure it's above the game board */
+    display: block;  /* Always visible */
+}
+
 /* Spinner container */
 #spinner {
     display: none;  /* Hidden by default */
@@ -69,7 +78,7 @@ body, html {
     top: 20px;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 4;  /* Make sure it's above everything else */
+    z-index: 4;
 }
 
 /* Spinner styling */
